force-app/main/default/objects/Payment_Plan_Milestone__c/Payment_Plan_Milestone__c.object-meta.xml
<CustomObject>
    <label>Payment Plan Milestone</label>
    <nameField>
        <displayFormat>PPM-{00000}</displayFormat>
        <label>Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>