force-app/main/default/objects/Payment_Plan_Milestone__c/fields/Days_From_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Trigger__c</fullName>
    <label>Days From Trigger</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>