force-app/main/default/objects/Payment_Plan_Milestone__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <label>Trigger</label>
    <length>120</length>
    <type>Text</type>
</CustomField>