force-app/main/default/objects/Payment_Plan_Milestone__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Booking</fullName><default>false</default><label>Booking</label></value>
            <value><fullName>Time-Based</fullName><default>false</default><label>Time-Based</label></value>
            <value><fullName>Construction</fullName><default>false</default><label>Construction</label></value>
            <value><fullName>Possession</fullName><default>false</default><label>Possession</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>